[gd_scene load_steps=5 format=2]

[ext_resource path="res://World.gd" type="Script" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Planet.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=4]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )
Planet = ExtResource( 3 )

[node name="Player" parent="." instance=ExtResource( 2 )]

[node name="StartPosition" type="Position2D" parent="."]

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="Planet" parent="." instance=ExtResource( 3 )]
position = Vector2( -6.21349, -189.351 )
[connection signal="prepare_game" from="HUD" to="." method="_on_HUD_prepare_game"]
[connection signal="start_game" from="HUD" to="." method="_on_HUD_start_game"]
[connection signal="crashed" from="Planet" to="." method="_on_Planet_crashed"]
